# purple-otr

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  dialogs.c  dialogs.h  gtk-dialog.c  otr-plugin.c  otr-plugin.h  purple-dialog.c  purple-dialog.h  purple-ui.c  purple-ui.h  ui.c  ui.h
